generated/nixidy/prod/vaultwarden/HTTPRoute-vaultwarden.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vaultwarden
  name: vaultwarden
  namespace: dotfiles
spec:
  hostnames:
    - vaultwarden.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vaultwarden
          namespace: dotfiles
          port: 80
          weight: 1
